--- a/hw9/index.html
+++ b/hw9/index.html
@@ -2,18 +2,17 @@
 <html>
   <head>
     <title>Embedding Vega-Lite</title>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
   </head>
   <body>
     <div id="vis1"></div>
-
     <script type="text/javascript">
-    var spec1 = "map_country.json";
+    var spec1 = "js/map_country.json";
         vegaEmbed('#vis1', spec1).then(function(result) {
   }).catch(console.error);
-
     </script>
   </body>
 </html>
