hide open in vegalite button

--- a/hw9/index.html
+++ b/hw9/index.html
@@ -11,7 +11,7 @@
     <div id="vis1"></div>
     <script type="text/javascript">
     var spec1 = "js/map_country.json";
-        vegaEmbed('#vis1', spec1).then(function(result) {
+        vegaEmbed('#vis1', spec1, {"actions": false}).then(function(result) {
   }).catch(console.error);
     </script>
   </body>
