--- a/a2/index.html
+++ b/a2/index.html
@@ -37,10 +37,8 @@
         <div class="description description-left">
           <p>United Nations Educational, Scientific and Cultural Organization (UNESCO) World Heritage List contains
             sites which are designated as having “outstanding universal value” under the Convention Concerning the
-            Protection of the World Cultural and Natural Heritage. </br></br>This document was adopted by UNESCO in 1972
-            and formally took effect in 1975 after having been ratified by 20 countries. It provides a framework for
-            international cooperation in preserving and protecting cultural treasures and natural areas throughout the
-            world.
+            Protection of the World Cultural and Natural Heritage. </br></br>This document formally took effect in 1975, being ratified by 20 countries,
+            and provides a framework for preseving and protecting these sacred sites around the world.  
             </br></br><a id="region" onclick="changeMapToCountry()" style="color: #157497;display:block"><u>Change Map
                 View</u></a>
           </p>
