--- a/hw10/index.html
+++ b/hw10/index.html
@@ -16,11 +16,13 @@
   </head>
   <body>
     <div class="pure-g">
-
+    
+      <!-- Vis 1 -->
       <div class="pure-u-1-2">
         <div id="vis1" style="display:block"></div>
       </div>
-
+  
+      <!-- Vis 2 -->
       <div class="pure-u-1-2">
         <div id="vis2" style="display:block"></div>
       </div>
