add annotations to plots

--- a/a2/index.html
+++ b/a2/index.html
@@ -39,8 +39,7 @@
             sites which are designated as having “outstanding universal value” under the Convention Concerning the
             Protection of the World Cultural and Natural Heritage. </br></br>This document formally took effect in 1975, being ratified by 20 countries,
             and provides a framework for preseving and protecting these sacred sites around the world.  
-            </br></br><a id="region" onclick="changeMapToCountry()" style="color: #157497;display:block"><u>Change Map
-                View</u></a>
+            </br></br><button style="color: #157497" onclick="changeMapToCountry()">Change Map View</button>
           </p>
 
         </div>
@@ -60,10 +59,10 @@
 
       <div class="pure-u-1-2">
         <div class="description description-left">
-          <p style="margin-top:50px">Despite beginning in 1975, sites were continuously being added to the list. <a
+          <p style="margin-top:50px">Despite beginning in 1975, sites are, to this day, continuously being added to the list. </br></br><a
               style="color:#FCB07E"><strong>Europe</strong></a> has the largest number of sites, with a over 180 sites
             being recognised between <strong>1990</strong> and <strong>2000</strong>.
-            </br></br><a style="color:#832161"><strong>Oceania</strong></a> did not have a site on the list until over
+          </br></br>However, <a style="color:#832161"><strong>Oceania</strong></a> did not have a site on the list until over
             10 years after the list was created.
             </br></br><i>Use the legend to highlight a region.</i>
           </p>
@@ -99,11 +98,10 @@
             World Heritage Sites' was compiled by UNESCO and is intended to increase awareness of the threats to these
             sites and to increase counteractive measures. </br></br>
             Despite only having a small number of sites, <a style="color:#832161"><strong>Oceania</strong></a> has the
-            <u>highest percentage of sites in danger</u>, while <a style="color:#0B5563"><strong>Australia</strong></a>
-            has the lowest, with <u>no known danger sites</u>.
-            </br></br>
-            <a href="https://whc.unesco.org/en/list/" style="color:#157497">Learn more about the UNESCO World Heritage
-              Sites</a>
+            highest percentage of sites in danger, while <a style="color:#0B5563"><strong>Australia</strong></a>
+            has the lowest, with no known danger sites.
+          </br></br><button style="color: #157497">
+            <a href="https://whc.unesco.org/en/list/" style="color:#157497;text-decoration:none;">Learn More</a></button>
           </p>
 
         </div>
