--- a/a2/index.html
+++ b/a2/index.html
@@ -46,15 +46,15 @@
       </div>
 
       <div class="pure-u-1-2">
-        <div id="map1" style="display:none"></div>
-        <div id="map2" style="display:block"></div>
+        <div id="map1" style="display:none; margin-top: 20px"></div>
+        <div id="map2" style="display:block;margin-top: 20px"></div>
       </div>
     </div>
 
     <div class="pure-g">
 
       <div class="pure-u-1-2">
-        <div id="line1" style="display:block"></div>
+        <div id="line1" style="display:block; margin-left:20px"></div>
       </div>
 
       <div class="pure-u-1-2">
@@ -89,7 +89,7 @@
     <div class="pure-g">
 
       <div class="pure-u-1-2">
-        <div id="bar1" style="display:block"></div>
+        <div id="bar1" style="display:block; margin-left:20px"></div>
       </div>
 
       <div class="pure-u-1-2">
